# smart-home

./: .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  changelog.md
examples/: builder.rs  observer.rs  reporter.rs
src/: device.rs  home_builder.rs  lib.rs  main.rs  report_composer.rs  reportable_trait.rs  room.rs  room_macro.rs  tcp_socket_emulator.rs  udp_thermometer_emulator.rs  with_emulators.rs
src/device/: electrical_socket.rs  smart_socket.rs  smart_thermometer.rs  socket_state.rs  static_electrical_socket.rs  static_thermometer.rs  tcp_electrical_socket.rs  thermometer.rs  udp_thermometer.rs
src/device/smart_socket/backends/: mod.rs  static_electrical_socket.rs  tcp_electrical_socket.rs
src/device/smart_thermometer/backends/: mod.rs  static_thermometer.rs  udp_thermometer.rs
