[package]
name = "smart-home-lib"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "with_emulators"
path = "src/with_emulators.rs"

[[bin]]
name = "tcp-socket"
path = "src/tcp_socket_emulator.rs"

[[bin]]
name = "udp-thermometer"
path = "src/udp_thermometer_emulator.rs"

[dev-dependencies]
tempfile = "3.27.0"
